--- a/gb/21/10/17/n13310299.md
+++ b/gb/21/10/17/n13310299.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/sxvshi319/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/sxvshi319/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/sxvshi319/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/sxvshi319/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>专家：中共武力犯台 须付巨大代价</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/01/20210127PHO0058l-600x400.jpg" />
 <h6>台湾海军陆战队Ｍ109突击艇模拟岸边警戒状态。（中央社）
 </h6>
 <hr>
-<p>【大纪元2021年10月17日讯】（大纪元记者吴旻洲台湾台北报导）<ahref="https://github.com/sxvshi319/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>军机近期频繁扰台，引发国际高度警觉。根据外媒报导，有分析人士表示，中共犯台的军事能力虽逐渐增长，但若是真要侵台也会付出各种巨大代价，甚至需要10年以上的时间才能恢复到开战前的水平，这将会大大增加<ahref="https://github.com/sxvshi319/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md#1">美国</a>优势，因此目前中共仍不敢轻举妄动。</p>
-<p>根据《<ahref="https://github.com/sxvshi319/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md#1">美国</a>之音》报导，针对<ahref="https://github.com/sxvshi319/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>军力近年不断迅速扩张，美台官员持续发出严重警告，美国上周发布的新战略指南中，美国海军首次提到，中共海军实力已经可以和美国旗鼓相当，“至少在一代人以来，我们第一次有了战略竞争对手，他拥有与我们相匹敌的海军能力。”</p>
+<p>【大纪元2021年10月17日讯】（大纪元记者吴旻洲台湾台北报导）<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>军机近期频繁扰台，引发国际高度警觉。根据外媒报导，有分析人士表示，中共犯台的军事能力虽逐渐增长，但若是真要侵台也会付出各种巨大代价，甚至需要10年以上的时间才能恢复到开战前的水平，这将会大大增加<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md#1">美国</a>优势，因此目前中共仍不敢轻举妄动。</p>
+<p>根据《<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md#1">美国</a>之音》报导，针对<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>军力近年不断迅速扩张，美台官员持续发出严重警告，美国上周发布的新战略指南中，美国海军首次提到，中共海军实力已经可以和美国旗鼓相当，“至少在一代人以来，我们第一次有了战略竞争对手，他拥有与我们相匹敌的海军能力。”</p>
 <p>美国海军部长托罗（Carlos Del Toro）上周在海军学院发表讲话时进一步提到，中共作为冷战以来的第一个战略对手，其海军能力“在某些领域甚至超过我们自己。”</p>
 <p>托罗还说，美国应该根据新的形势调整对台政策，“作为国家领导人，尤其是文职领导人，我们必须始终不断审视我们的政策，以确保我们对其进行调整、更改或废除，这一点非常重要。”</p>
 <p>美国空军副总参谋长希诺特（Clinton Hinote）近期也坦言，针对共军追赶美军的问题，“我们已经没有时间了”。他日前还提到，“在一些重要领域，我们已经落后了——今晚。这不是明天的问题，这是今天。”</p>
@@ -22,47 +22,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/21/10/2/n13275442.md#1">中共专家称攻台十大收益 学者：都是笑话</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/21/10/8/n13291224.md#1">中共回应台防长“最严峻时刻”上微博热搜</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/21/10/12/n13300455.md#1">海峡两岸都纪念辛亥革命 学者：中共欺世盗名</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/21/10/14/n13304231.md#1">台国防部提12招抵御共军 专家：全民备战</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/21/10/14/n13305166.md#1">【时事纵横】谈民主说通胀 习李讲话同遭质疑</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/21/10/15/n13306673.md#1">曝美军驻台 美退将：增共军侵台成本</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/21/10/15/n13306690.md#1">前美国务卿：中共避战 遥控亲共势力颠覆台湾</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/21/10/15/n13306869.md#1">【名家专栏】台北北京华盛顿 三方动态影响全球</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/21/10/16/n13307920.md#1">【翻墙必看】分析：中共已处于内部分裂</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/21/10/16/n13308778.md#1">【十字路口】政变危机 习出兵台湾有七大风险</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/2/n13275442.md#1">中共专家称攻台十大收益 学者：都是笑话</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/8/n13291224.md#1">中共回应台防长“最严峻时刻”上微博热搜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/12/n13300455.md#1">海峡两岸都纪念辛亥革命 学者：中共欺世盗名</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/14/n13304231.md#1">台国防部提12招抵御共军 专家：全民备战</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/14/n13305166.md#1">【时事纵横】谈民主说通胀 习李讲话同遭质疑</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/15/n13306673.md#1">曝美军驻台 美退将：增共军侵台成本</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/15/n13306690.md#1">前美国务卿：中共避战 遥控亲共势力颠覆台湾</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/15/n13306869.md#1">【名家专栏】台北北京华盛顿 三方动态影响全球</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/16/n13307920.md#1">【翻墙必看】分析：中共已处于内部分裂</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/16/n13308778.md#1">【十字路口】政变危机 习出兵台湾有七大风险</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/12/n11108237.md#1" target="_blank">张林：疯狂中共两次差点让中国人被灭绝</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/11/n7544340.md#1" target="_blank">大陆律师在法庭上揭穿“天安门自焚”伪案</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/27/n11481511.md#1" target="_blank">晓明：回顾历史，拒绝遗忘</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/21/n11602447.md#1" target="_blank">他们为我们的生活带来光明（4）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/3/2/n13617338.md#1">【秦鹏直播】俄乌战事未平 俄战机进入瑞典日本</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/3/3/n13618349.md#1">【时事军事】攻乌失利 普京祭出前所未有核威胁</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/3/2/n13617336.md#1">吴明德：拆解港府千亿财政赤字如何变盈余</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/2/28/n13611283.md#1">【更新2.28】俄军逼近基辅 车队长达40英里</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/2/28/n13611950.md#1">俄罗斯侵乌第5天 世界局势出现哪些变化？</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/3/1/n13614671.md#1">泽连斯基欧议会演说 全场起立鼓掌 翻译都落泪</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/3/2/n13615002.md#1">小粉红对乌国女性发低俗言论 杜汶泽发文怒呛</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/3/1/n13612683.md#1">75岁老人白发变黑 中医师教你养发秘诀</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/3/2/n13616492.md#1">这道菜能让你的安慰餐更完美</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/3/1/n13614012.md#1">2型糖尿病食疗可以改善 多种方法都有效</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/21/n13660848.md#1">【未解之谜】为何通灵者 看不透自己的未来？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674994.md#1">【财商天下】普京出险招 欧盟如何应对</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675351.md#1">【横河观点】乌克兰抗俄给台湾的借鉴与启示</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674186.md#1">上海疫情大爆发 张文宏言论引炮轰</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13673923.md#1">挺俄反俄两派互搏 中共要全国学校紧跟党立场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673050.md#1">俄乌战争后效应 外资大规模撤离大陆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673289.md#1">参加西藏之家音乐会 基努李维主演电影遭下架</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673381.md#1">“一代笑匠”许冠文获香港金像奖终身成就奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675602.md#1">砸60万装修餐厅 《营业中》开播吸引粉丝前来</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674280.md#1">TAKAHIRO与武井咲次女出生：热闹中感受幸福</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/14/n13645681.md#1">不吃油、米饭？让大脑开心的食物吃对就不怕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672739.md#1">【健康1+1】CDC：废水预测病毒升 下波高峰不是BA2？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/sxvshi319/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/sxvshi319/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/17/n13310299.htm">专家：中共武力犯台 须付巨大代价</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/17/n13310299.htm">专家：中共武力犯台 须付巨大代价</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/sxvshi319/djy/blob/master/gb/21/10/17/n13310299.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/sxvshi319/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/sxvshi319/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/sxvshi319/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/10/17/n13310299.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
